--- a/.gitattributes
+++ b/.gitattributes
@@ -3,3 +3,4 @@ bg[[:space:]]2.mp4 filter=lfs diff=lfs merge=lfs -text
 bg[[:space:]]3.mp4 filter=lfs diff=lfs merge=lfs -text
 *.mp4 filter=lfs diff=lfs merge=lfs -text
 .mp4 filter=lfs diff=lfs merge=lfs -text
+large_file_needed filter=lfs diff=lfs merge=lfs -text
